--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -63,6 +63,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Managers\BoxSpriteManager.cs" />
+    <Compile Include="Managers\SpriteBatchManager.cs" />
+    <Compile Include="Managers\SpriteNodeManager.cs" />
+    <Compile Include="Nodes\Sprite.cs" />
     <Compile Include="Nodes\DLink.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Managers\ImageManager.cs" />
@@ -70,10 +74,13 @@
     <Compile Include="Main.cs" />
     <Compile Include="Managers\Manager.cs" />
     <Compile Include="Nodes\Image.cs" />
-    <Compile Include="Nodes\Sprite.cs" />
+    <Compile Include="Nodes\BoxSprite.cs" />
+    <Compile Include="Nodes\GameSprite.cs" />
+    <Compile Include="Nodes\SpriteBatch.cs" />
+    <Compile Include="Nodes\SpriteNode.cs" />
     <Compile Include="Nodes\Texture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Managers\SpriteManager.cs" />
+    <Compile Include="Managers\GameSpriteManager.cs" />
     <Compile Include="Managers\TextureManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +103,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
