Updating with refactor, adding in commands, proxy sprite manager, basic game objects

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -63,25 +63,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Managers\BoxSpriteManager.cs" />
-    <Compile Include="Managers\SpriteBatchManager.cs" />
-    <Compile Include="Managers\SpriteNodeManager.cs" />
-    <Compile Include="Nodes\Sprite.cs" />
-    <Compile Include="Nodes\DLink.cs" />
+    <Compile Include="Abstract\SLink.cs" />
+    <Compile Include="Composite\Component.cs" />
+    <Compile Include="Composite\Composite.cs" />
+    <Compile Include="Composite\Leaf.cs" />
+    <Compile Include="GameObjects\AlienFactory.cs" />
+    <Compile Include="GameObjects\GameObject.cs" />
+    <Compile Include="GameObjects\GameObjectManager.cs" />
+    <Compile Include="GameObjects\GameObjectNode.cs" />
+    <Compile Include="GameObjects\Crab.cs" />
+    <Compile Include="GameObjects\Octopus.cs" />
+    <Compile Include="GameObjects\Squid.cs" />
+    <Compile Include="GameObjects\NullGameObject.cs" />
+    <Compile Include="Images\ImageHolder.cs" />
+    <Compile Include="Sprites\ProxySprite.cs" />
+    <Compile Include="Sprites\ProxySpriteManager.cs" />
+    <Compile Include="Timer\AnimationSpriteCommand.cs" />
+    <Compile Include="Timer\Command.cs" />
+    <Compile Include="Sprites\BoxSpriteManager.cs" />
+    <Compile Include="Batches\SpriteBatchManager.cs" />
+    <Compile Include="Batches\SpriteNodeManager.cs" />
+    <Compile Include="Sprites\Sprite.cs" />
+    <Compile Include="Abstract\DLink.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Managers\ImageManager.cs" />
+    <Compile Include="Images\ImageManager.cs" />
     <Compile Include="InputTest.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Managers\Manager.cs" />
-    <Compile Include="Nodes\Image.cs" />
-    <Compile Include="Nodes\BoxSprite.cs" />
-    <Compile Include="Nodes\GameSprite.cs" />
-    <Compile Include="Nodes\SpriteBatch.cs" />
-    <Compile Include="Nodes\SpriteNode.cs" />
-    <Compile Include="Nodes\Texture.cs" />
+    <Compile Include="Abstract\Manager.cs" />
+    <Compile Include="Images\Image.cs" />
+    <Compile Include="Sprites\BoxSprite.cs" />
+    <Compile Include="Sprites\GameSprite.cs" />
+    <Compile Include="Batches\SpriteBatch.cs" />
+    <Compile Include="Batches\SpriteNode.cs" />
+    <Compile Include="Texture\Texture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Managers\GameSpriteManager.cs" />
-    <Compile Include="Managers\TextureManager.cs" />
+    <Compile Include="Sprites\GameSpriteManager.cs" />
+    <Compile Include="Texture\TextureManager.cs" />
+    <Compile Include="Timer\SampleCommand.cs" />
+    <Compile Include="Timer\SampleRepeatedCommand.cs" />
+    <Compile Include="Timer\TimerEvent.cs" />
+    <Compile Include="Timer\TimerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
