Updates for states, observers, player, missiles, and grid functionality

--- a/SpaceInvaders/SpaceInvaders.csproj
+++ b/SpaceInvaders/SpaceInvaders.csproj
@@ -64,20 +64,46 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\SLink.cs" />
-    <Compile Include="Composite\Component.cs" />
-    <Compile Include="Composite\Composite.cs" />
-    <Compile Include="Composite\Leaf.cs" />
-    <Compile Include="GameObjects\AlienFactory.cs" />
+    <Compile Include="Collision\ColObject.cs" />
+    <Compile Include="Collision\ColPair.cs" />
+    <Compile Include="Collision\ColPairManager.cs" />
+    <Compile Include="Collision\ColRect.cs" />
+    <Compile Include="Collision\ColSubject.cs" />
+    <Compile Include="Collision\ColObserver.cs" />
+    <Compile Include="Collision\ColVisitor.cs" />
+    <Compile Include="Composites\Component.cs" />
+    <Compile Include="Composites\Composite.cs" />
+    <Compile Include="Composites\ForwardIterator.cs" />
+    <Compile Include="Composites\Iterator.cs" />
+    <Compile Include="Composites\Leaf.cs" />
+    <Compile Include="Composites\ReverseIterator.cs" />
+    <Compile Include="GameObjects\Aliens\AlienCategory.cs" />
+    <Compile Include="GameObjects\Aliens\AlienColumn.cs" />
+    <Compile Include="GameObjects\Aliens\AlienFactory.cs" />
+    <Compile Include="GameObjects\Aliens\AlienGrid.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\GameObjectManager.cs" />
     <Compile Include="GameObjects\GameObjectNode.cs" />
-    <Compile Include="GameObjects\Crab.cs" />
-    <Compile Include="GameObjects\Octopus.cs" />
-    <Compile Include="GameObjects\Squid.cs" />
+    <Compile Include="GameObjects\Aliens\Crab.cs" />
+    <Compile Include="GameObjects\Aliens\Octopus.cs" />
+    <Compile Include="GameObjects\Aliens\Squid.cs" />
+    <Compile Include="GameObjects\Missiles\Missile.cs" />
+    <Compile Include="GameObjects\Missiles\MissileGroup.cs" />
     <Compile Include="GameObjects\NullGameObject.cs" />
+    <Compile Include="GameObjects\Player\PlayerCategory.cs" />
+    <Compile Include="GameObjects\Player\PlayerManager.cs" />
+    <Compile Include="GameObjects\Player\PlayerRoot.cs" />
+    <Compile Include="GameObjects\Player\PlayerShip.cs" />
+    <Compile Include="GameObjects\UUIDGenerator.cs" />
     <Compile Include="Images\ImageHolder.cs" />
+    <Compile Include="Observers\PlayerStateChangeObserver.cs" />
+    <Compile Include="Observers\RemoveAlienObserver.cs" />
+    <Compile Include="Observers\RemoveMissileObserver.cs" />
     <Compile Include="Sprites\ProxySprite.cs" />
     <Compile Include="Sprites\ProxySpriteManager.cs" />
+    <Compile Include="States\PlayerState.cs" />
+    <Compile Include="States\PlayerStateActive.cs" />
+    <Compile Include="States\PlayerStateNoAmmo.cs" />
     <Compile Include="Timer\AnimationSpriteCommand.cs" />
     <Compile Include="Timer\Command.cs" />
     <Compile Include="Sprites\BoxSpriteManager.cs" />
